# OTA-secured-framework-for-constrained-resources-device

./: .gitignore  Claude.md  muc_luc_goi_y.md
.claude/: settings.local.json
1_server_python/: gui_app.py  requirements.txt
1_server_python/src/: crypto_utils.py  manifest_builder.py  packet_builder.py
1_server_python/src/gui/: __init__.py  config.py  logger.py  theme.py  widgets.py
2_gateway_esp32/: CMakeLists.txt  platformio.ini
2_gateway_esp32/main/: CMakeLists.txt  main.c  ota_cache.c  ota_cache.h  protocol_packet.h  protocol_parser.c  protocol_parser.h  uart_bridge.c  uart_bridge.h
3_node_stm32/.metadata/: .log4j2.xml  version.ini
3_node_stm32/application/: STM32F103_App.ld  platformio.ini
3_node_stm32/application/lib/: uECC.h
3_node_stm32/application/src/: crypto_aead.h  crypto_port.c  crypto_port.h  flash_driver.c  flash_driver.h  main.c  ota_handler.c  ota_handler.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
3_node_stm32/ascon_ota_node/: .cproject  .project
3_node_stm32/ascon_ota_node/.metadata/: .log4j2.xml  version.ini
3_node_stm32/bootloader/: STM32F103_Boot.ld  platformio.ini
3_node_stm32/bootloader/src/: main.c
3_node_stm32/docs/: flash_map.md
3_node_stm32/stm32_project/.metadata/: .log4j2.xml  version.ini
3_node_stm32/stm32_project/ascon_ota_node/: .cproject  .project
3_node_stm32/stm32_project/ascon_ota_node_project/: .cproject  .project  CMakeLists.txt  STM32F103CBTX_FLASH.ld
common/: error_codes.h  manifest_def.h  protocol_packet.h
docs/technical/: checklist.md  hw_used.md  initial_ideas.md  pinout.md  system_overview.md
(+84 files in other folders)
